allow building most mmt stuff in one go exclude jedit that does not compile
git-svn-id: https://svn.kwarc.info/repos/MMT/src@2420 09069c07-60fa-4895-8316-727242e252e4